--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@
 .app-container{
     display: flex;
     height: 100vh;
+    /* margin-bottom: 40px; */
 }
 
 .sidebar{
@@ -30,6 +31,7 @@ nav.sidebar-content{
 }
 
 .sidebar-top{
+    margin-top: 10px;
     display: flex;
     height: 5%;
     /* border: 1px solid black; */
@@ -98,18 +100,22 @@ nav.sidebar-content{
 .side-bar-main-content-container{
     display: flex;
     flex-direction: column;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     height: 100%;
     padding: 10px;
     gap:10px;
 }
-.addItem, .searchItem{
+.addItem, .searchItem, .inboxItem, .calendarItem{
     display: flex;
     align-items: center;
     gap: 10px;
     /* border: 1px solid red; */
     padding: 5px;
     border-radius: 10px;
+}
+
+.addItemText {
+    color: rgb(201, 20, 0);
 }
 
 .addItemButton {
@@ -127,16 +133,32 @@ nav.sidebar-content{
     max-width: 50%;
 }
 
-.addItem:hover, .searchItem:hover{
+.addItem:hover, .searchItem:hover, .inboxItem:hover, .calendarItem:hover{
     cursor: pointer;
     background-color: rgb(251, 225, 199);
 }
 
-.searchIcon img{
+.searchIcon img, .inboxItem img, .calendarItem img{
     height: 25px;
     width: 25px;
 
 }
+
+
+
+
+footer {
+    color: white;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000000; /* Adjust the background color as needed */
+    padding: 11px;             /* Add padding if you want some space inside the footer */
+    text-align: center;        /* Center the text/content in the footer */
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); /* Optional: add shadow for visual separation */
+}
+
 
 
 
