--- a/src/styles.css
+++ b/src/styles.css
@@ -145,6 +145,74 @@ nav.sidebar-content{
 
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 142, 122);
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    width: 80%;
+    max-width: 500px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px;
+}
+
+.close-btn{
+    position:absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 14px;
+    color: #333;
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+label{
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+input[type="text"],input[type="datetime-local"], textarea {
+    margin-top: 5px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea{
+    height: 120px;
+    resize: vertical;
+}
+
+
+button[type="submit"] {
+    margin-top: 15px;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button[type="submit"]:hover {
+    background-color: #45a049;
+  }
 
 
 
