--- a/src/styles.css
+++ b/src/styles.css
@@ -236,7 +236,8 @@ nav.sidebar-content{
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(255, 142, 122);
+    backdrop-filter: blur(5px);
+    /* background-color: rgb(255, 142, 122); */
 }
 
 .modal-content {
