Fix issue with deleting projects and tasks. add filters to see which tasks belong to which project. add guardrails to prevent deleting project before deleting associated tasks.

--- a/src/styles.css
+++ b/src/styles.css
@@ -220,6 +220,13 @@ nav.sidebar-content{
 }
 
 
+.project-groups li {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 
 
